# hadhari

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/data/: loader.py
src/db/: firestore.py
src/models/: trainer.py
src/preprocessing/: preprocessor.py
